--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "rent-a-carts",
+  "name": "rent-a-cars",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Anna-1987.github.io/rent-a-carts/",
+  "homepage": "https://Anna-1987.github.io/rent-a-cars/",
   "dependencies": {
-    "@reduxjs/toolkit": "^2.1.0",
+    "@mui/icons-material": "^5.14.18",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.7",
+    "axios": "^1.6.2",
+    "notiflix": "^3.2.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.21.3",
+    "react-loader-spinner": "^5.4.5",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
